--- a/manipulation_RL/ExDManipulationRL.ini
+++ b/manipulation_RL/ExDManipulationRL.ini
@@ -1,21 +1,60 @@
 {
+    "dynamicEnvMap": true,
     "shadows": true,
     "antiAliasing": true,
     "ssao": false,
     "ssaoDisplay": false,
-    "ssaoClamp": 0.8,
-    "ssaoLumInfluence": 0.7,
+    "ssaoClamp": "0.94",
+    "ssaoLumInfluence": "1",
     "rgbCurve": {
-        "red": [],
-        "green": [],
+        "red": [
+            [
+                0,
+                0
+            ],
+            [
+                0.410400390625,
+                0.4481201171875
+            ],
+            [
+                0.761962890625,
+                0.7957763671875
+            ],
+            [
+                1,
+                1
+            ]
+        ],
+        "green": [
+            [
+                0,
+                0
+            ],
+            [
+                0.261962890625,
+                0.2801513671875
+            ],
+            [
+                0.718994140625,
+                0.7371826171875
+            ],
+            [
+                1,
+                1
+            ]
+        ],
         "blue": [
             [
                 0,
                 0
             ],
             [
-                0.7728271484375,
-                0.75146484375
+                0.265869140625,
+                0.2606201171875
+            ],
+            [
+                0.840087890625,
+                0.7645263671875
             ],
             [
                 1,
@@ -23,19 +62,31 @@
             ]
         ]
     },
-    "levelsInBlack": "0.08",
-    "levelsInGamma": 0.95,
-    "levelsInWhite": "0.95",
+    "levelsInBlack": "0.09",
+    "levelsInGamma": 0.52,
+    "levelsInWhite": "0.8",
     "levelsOutBlack": 0,
     "levelsOutWhite": 1,
-    "skyBox": "blur",
+    "skyBox": "forest",
     "sun": "",
     "bloom": false,
-    "bloomStrength": "0.51",
-    "bloomRadius": "1.26",
+    "bloomStrength": "0.83",
+    "bloomRadius": "0.29",
     "bloomThreshold": "0.91",
-    "fog": false,
-    "fogDensity": "0.03",
-    "fogColor": "#c7c0bc",
-    "pbrMaterial": true
+    "fog": true,
+    "fogDensity": "0.02",
+    "fogColor": "#97a2af",
+    "pbrMaterial": true,
+    "shadowSettings": [
+        {
+            "lightName": "sun",
+            "mapSize": 4096,
+            "cameraBottom": -10,
+            "cameraLeft": -10,
+            "cameraRight": 10,
+            "cameraTop": 25,
+            "bias": 0.0003,
+            "radius": 1.2
+        }
+    ]
 }
