[NRRPLT-4945] Create a suitable COLLADA file of the mouse skin for web frontend visualization
Change-Id: I9bfc81b4ee182ede2c9bc792cd876c3d69123561

--- a/cdp1_mouse/ExDMouseCDP1.ini
+++ b/cdp1_mouse/ExDMouseCDP1.ini
@@ -96,5 +96,19 @@
     "cameraSensitivity": {
         "translation": 0.1,
         "rotation": 1.0
-    }
+    },
+    "skins":[{
+        "mapTo":"robot",
+        "visible": true,
+        "parentObject":"MouseSkeletonRoot",
+        "mesh":"cdp1_world/meshes/MouseSkin.dae",
+        "bonePrefix":"robot::",
+        "hideParentMeshWhenVisible": true,
+        "jointToBoneAngleCorrection": {
+            "humerus": [3.1416,    3.1416,     1.5708],
+            "radius":  [3.1416,    3.1416,     1.5708],
+            "foot":    [1.5708,    2.7716,     1.5708]
+        }
+    }]
+
 }
